test/compile_errors/stage1/obj/labeled_break_not_found.zig
export fn entry() void {
    blah: while (true) {
        while (true) {
            break :outer;
        }
    }
}

// labeled break not found
//
// tmp.zig:4:20: error: label not found: 'outer'
